force-app/main/default/objects/Rubrik_Aha_Credencial__mdt/Rubrik_Aha_Credencial__mdt.object-meta.xml
<CustomObject>
    <label>Rubrik Aha Credencial</label>
    <pluralLabel>Rubrik Aha Credencials</pluralLabel>
</CustomObject>