force-app/main/default/objects/Rubrik_Aha_Credencial__mdt/fields/AHA_API_KEY__c.field-meta.xml
<CustomField>
    <fullName>AHA_API_KEY__c</fullName>
    <label>AHA_API_KEY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>