force-app/main/default/objects/Rubrik_Aha_Credencial__mdt/fields/AHA_BASE_URL__c.field-meta.xml
<CustomField>
    <fullName>AHA_BASE_URL__c</fullName>
    <label>AHA_BASE_URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>