force-app/main/default/objects/Rubrik_Aha_Credencial__mdt/fields/Aha_ProductID__c.field-meta.xml
<CustomField>
    <fullName>Aha_ProductID__c</fullName>
    <label>Aha_ProductID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>