force-app/main/default/objects/Rubrik_Aha_Credencial__mdt/fields/Aha_Site_URL__c.field-meta.xml
<CustomField>
    <fullName>Aha_Site_URL__c</fullName>
    <label>Aha Site URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>